# pizibot

./: .gitignore  README.md
pizibot_description/: CMakeLists.txt  README.md
pizibot_description/launch/: rsp.launch.py  rviz2.launch.py
pizibot_description/meshes/: tire_80mm.stl  wheel.stl
pizibot_description/rviz/: viz_bot.rviz
pizibot_description/urdf/: camera.xacro  control.xacro  dimensions.xacro  gazebo_config.xacro  imu.xacro  lidar.xacro  material_colors.xacro  pizibot.urdf.xacro  pizibot_macro.xacro  ros2_control.xacro
pizibot_gazebo/launch/: launch_sim.launch.py
pizibot_gazebo/param/: twist_mux.yaml
pizibot_gazebo/src/: yaml_modifier_node.cpp
pizibot_gz/: CMakeLists.txt  README.md  package.xml
pizibot_gz/launch/: dataset_save.launch.py  launch_sim.launch.py  launch_sim_empty.launch.py  rviz2.launch.py
pizibot_gz/params/: pizibot_gz_bridge.yaml  twist_mux.yaml
pizibot_gz/rviz/: sim_viz.rviz
pizibot_gz/scripts/: twist_stamped_to_twist.py
pizibot_gz/src/: dataset_saver.cpp
pizibot_gz/worlds/: industrial-warehouse.sdf  world_minimal.sdf  world_test1.world  world_test2.world
pizibot_hardware/: CMakeLists.txt  README.md  package.xml
pizibot_hardware/include/pizibot_hardware/: ADS1115.h
pizibot_hardware/launch/: batterie_management.launch.py  launch_real_robot.launch.py  rplidar.launch.py
pizibot_hardware/param/: robot_controllers.yaml  twist_mux.yaml
pizibot_hardware/rviz/: viz_real_bot.rviz
pizibot_hardware/scripts/: esp32cam_stream_getter.py
pizibot_hardware/src/: ADS1115.cpp  battery_management_node.cpp  battery_state_publisher_node.cpp  yaml_modifier_node.cpp
pizibot_navigation/: CMakeLists.txt  README.md  package.xml
pizibot_navigation/launch/: ekf.launch.py  full_localization.launch.py  full_mapping.launch.py  full_sim_localization.launch.py  full_sim_mapping.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  publish_initial_pose.launch.py  rviz2.launch.py
pizibot_navigation/map/: home_1.data  home_1.pgm  home_1.yaml  industrial-warehouse.data  industrial-warehouse.pgm  industrial-warehouse.yaml  world_test1.data  world_test1.pgm  world_test1.yaml  world_test2.data  world_test2.pgm  world_test2.yaml
pizibot_navigation/param/: mapper_params_online_async.yaml  nav2_params.yaml
pizibot_navigation/params/: ekf.yaml  mapper_params_online_async.yaml  nav2_params.yaml
pizibot_navigation/rviz/: localization.rviz  mapping.rviz
pizibot_navigation/src/: initial_pose_publisher.cpp
pizibot_remote_ui/: CMakeLists.txt  README.md  package.xml
pizibot_remote_ui/launch/: remote_ui.launch.py
pizibot_remote_ui/params/: rosbridge.yaml
pizibot_remote_ui/web/: README.md  index.html  package-lock.json  package.json
pizibot_remote_ui/web/public/: manifest.json  sw.js
pizibot_remote_ui/web/src/: App.vue  main.js  ros.js
pizibot_remote_ui/web/src/components/: CameraView.vue  Joystick.vue  Telemetry.vue
pizibot_remote_ui/web/src/styles/: main.css
pizibot_teleop/: CMakeLists.txt  README.md
pizibot_teleop/launch/: joystick_teleop.launch.py  keyboard_teleop.launch.py
pizibot_teleop/params/: joystick.yaml
pizibot_vision/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
pizibot_vision/config/: camera_params.yaml
pizibot_vision/launch/: camera.launch.py
pizibot_vision/src/: camera_publisher_node.cpp
pizibot_voice/: README.md  package.xml  setup.cfg  setup.py
pizibot_voice/data/: world_test1_rooms_data.json
pizibot_voice/launch/: voice_room_navigation.launch.py
pizibot_voice/pizibot_voice/: keyboard_activator.py  pose_publish_from_room_number.py  voice_recorder.py
