<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pizibot_gz</name>
  <version>0.0.0</version>
  <description>Gazebo Harmonic simulation for Pizibot robot</description>
  <maintainer email="axelniato@gmail.com">Axel NIATO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>pizibot_description</exec_depend>
  <exec_depend>ros-gz</exec_depend>
  <exec_depend>ros-gz-bridge</exec_depend>
  <exec_depend>ros-gz-sim</exec_depend>

  <build_depend>yaml-cpp</build_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
