<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pizibot_voice</name>
  <version>0.0.0</version>
  <description>Voice control package for Pizibot robot - enables voice-activated room navigation</description>
  <maintainer email="axelniato@gmail.com">Axel NIATO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>ament_index_python</depend>

  <exec_depend>python3-pynput</exec_depend>
  <exec_depend>python3-sounddevice</exec_depend>
  <exec_depend>python3-speechrecognition</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
